force-app/main/default/objects/Must_Sell_No_Sale__c/Must_Sell_No_Sale__c.object-meta.xml
<CustomObject>
    <description>Child of Sales Order (BRD 17). Captures reason a Must-Sell SKU was NOT ordered; stored under the order record.</description>
    <label>Must-Sell No-Sale</label>
    <nameField>
        <displayFormat>MSN-{000000}</displayFormat>
        <label>Must-Sell No-Sale ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Must-Sell No-Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>