force-app/main/default/objects/Must_Sell_No_Sale__c/fields/No_Sale_Reason__c.field-meta.xml
<CustomField>
    <fullName>No_Sale_Reason__c</fullName>
    <label>No-Sale Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Out of stock</fullName>
            </value>
            <value>
                <fullName>Low demand</fullName>
            </value>
            <value>
                <fullName>Price issue</fullName>
            </value>
            <value>
                <fullName>Near expiry</fullName>
            </value>
            <value>
                <fullName>Customer refused</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>