force-app/main/default/objects/Must_Sell_No_Sale__c/fields/Product_Ext__c.field-meta.xml
<CustomField>
    <fullName>Product_Ext__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product_Extension__c</referenceTo>
    <relationshipName>Must_Sell_No_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>