force-app/main/default/objects/Must_Sell_No_Sale__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <label>Order</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Must-Sell No-Sales</relationshipLabel>
    <relationshipName>Must_Sell_No_Sales</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>