force-app/main/default/objects/Must_Sell_No_Sale__c/validationRules/No_Sale_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Sale_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(No_Sale_Reason__c))</errorConditionFormula>
    <errorMessage>A no-sale reason is mandatory when a Must-Sell SKU is not ordered (BRD 17).</errorMessage>
</ValidationRule>